[package]
name = "reverse-wordle"
version = "0.1.0"
authors = ["Simon Zeng"]
license = "MIT"
description = "Wordle but in reverse"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[profile.release]
lto = true

[dependencies]
bitintr = "0.3.0"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
